--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <a href="#section4">EVENTS</a>
                     </li>
                 </ul><!-- .gnb_right -->
-            </div><!-- .inner_header -->z
+            </div><!-- .inner_header -->
         </div>
         <!-- header E -->
 
