--- a/index.html
+++ b/index.html
@@ -295,47 +295,50 @@
         <!-- footer S -->
         <div id="footer">
             <div class="inner_footer">
-                <h1>
-                    <a href="#">
-                        <img src="./images/logo.svg" alt="PROUST logo">
-                    </a>
-                </h1>
-                <ul class="footer_list">
-                    <li><!-- 1 -->
-                        <p class="footer_title">
-                            Address
-                        </p>
-                        <p class="footer_text">
-                            26 Jungang-daero, Jung-gu, Busan
-                        </p>
-                    </li>
-                    <li><!-- 2 -->
-                        <p class="footer_title">
-                            Contact
-                        </p>
-                        <p class="footer_text">
-                            Tel. 222-251-2512
-                            <br>
-                            Fax. 222-251-2513
-                        </p>
-                    </li>
-                    <li><!-- 3 -->
-                        <p class="footer_title">
-                            Follow Us
-                        </p>
-                        <p class="sns">
-                            <a href="#">
-                                <img src="./images/sns01.png" alt="sns">
-                            </a>
-                            <a href="#">
-                                <img src="./images/sns02.png" alt="sns">
-                            </a>
-                            <a href="#">
-                                <img src="./images/sns03.png" alt="sns">
-                            </a>
-                        </p>
-                    </li>
-                </ul><!-- .footer_list -->
+                <div class="footer_box">
+                    <h1>
+                        <a href="#">
+                            <img src="./images/logo.svg" alt="PROUST logo">
+                        </a>
+                    </h1>
+                    <ul class="footer_list">
+                        <li><!-- 1 -->
+                            <p class="footer_title">
+                                Address
+                            </p>
+                            <p class="footer_text">
+                                26 Jungang-daero, Jung-gu, Busan
+                            </p>
+                        </li>
+                        <li><!-- 2 -->
+                            <p class="footer_title">
+                                Contact
+                            </p>
+                            <p class="footer_text">
+                                Tel. 222-251-2512
+                                <br>
+                                Fax. 222-251-2513
+                            </p>
+                        </li>
+                        <li><!-- 3 -->
+                            <p class="footer_title">
+                                Follow Us
+                            </p>
+                            <p class="sns">
+                                <a href="#">
+                                    <img src="./images/sns01.png" alt="sns">
+                                </a>
+                                <a href="#">
+                                    <img src="./images/sns02.png" alt="sns">
+                                </a>
+                                <a href="#">
+                                    <img src="./images/sns03.png" alt="sns">
+                                </a>
+                            </p>
+                        </li>
+                    </ul><!-- .footer_list -->
+                </div>
+
                 <p class="copyright">
                     Copyright © 2026 Proust. All rights reserved.
                 </p>
